[project]
name = "jerry-s-game"
version = "0.1.0"
description = ""
authors = [
    {name = "Yakov Shepelev",email = "yasha.shepeleff@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"

[tool.black]
line-length = 78
include = '\.pyi?$'